<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NinjAlarm</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_my_alarms">My Alarms</string>
    <string name="myAlarms">My Alarms</string>
    <string name="newAlarm">New Alarm</string>
    <string name="title_activity_new_alarm">New Alarm</string>
    <string name="saveNewAlarm">Save</string>
    <string name="cancelNewAlarm">Cancel</string>
    <string name="byWeekday">By Weekday</string>
    <string name="byDate">By Date</string>
    <string name="time">Time</string>
    <string name="txtAlarmType">Alarm Type</string>
    <string name="volume">Volume</string>
    <string name="txtAlarmMelody">Alarm Melody</string>
    <string name="txtStopButton">Stop Button Level</string>
    <string name="txtSnooze">Snooze</string>
    <string name="snoozePower"></string>
    <string name="txtAlarmName">Name</string>
    <string name="nameHint">Insert a name</string>
    <string name="txtFieldAlarmName"></string>
    <string name="training">Training</string>
    <string name="ranking">Ranking</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnNormal">Normal</string>
    <string name="btnHard">Hard</string>
    <string name="btnNinja">Ninja</string>
    <string name="bola">BOLA</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="txtCloseDatePicker">x</string>
    <string name="checkBoxRepeat">Repeat</string>
    <string name="btnS">S</string>
    <string name="btnTu">T</string>
    <string name="empty"></string>
    <string name="btnW">W</string>
    <string name="btnTh">Th</string>
    <string name="btnF">F</string>

</resources>
