<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ufcg.es.ninjalarm.views.TrainingActivity" >
    
    <Button
        android:id="@+id/btnNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnHard"
        android:layout_alignLeft="@+id/btnHard"
        android:layout_alignRight="@+id/btnHard"
        android:text="@string/btnNormal" />

    <Button
        android:id="@+id/btnHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/btnHard" />

    <Button
        android:id="@+id/btnNinja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnHard"
        android:layout_alignRight="@+id/btnHard"
        android:layout_below="@+id/btnHard"
        android:text="@string/btnNinja" />


</RelativeLayout>
